--- a/public/css/newProfile.css
+++ b/public/css/newProfile.css
@@ -9,4 +9,36 @@ form {
 
 input {
   width: 30%;
+  padding: 0.5%;
+  margin-left:1% ;
+}
+
+label {
+  margin: 0.5% 1%;
+}
+
+#bio {
+  width: 30%;
+  padding: 0.5%;
+  margin-left:1% ;
+}
+
+#formFooter {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 15%;
+}
+
+#cancelButton {
+  padding: 8px;
+  margin: 1vw;
+  font-size: medium;
+  color: black;
+  text-decoration: none;
+  border: 1px solid ;
+  border-color: rgb(118, 118, 118);
+  border-style: outset;
+  background-color: rgb(239, 239, 239);
+  border-radius: 2px;
 }
