|#5|santhosh/ragini| serving home page with user menus and avatar for authorized user
modified homepage and its styles
added function renderHomepage in home.js
modified getQuestions handler

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -12,11 +12,18 @@ body {
 .logo {
   font-size: 30px;
 }
-button {
+.unauthBtn {
   padding: 8px;
   margin-left: 1vw;
   height: 4.5vh;
   font-size: medium;
+}
+.avatar {
+  height: 4vh;
+  border-radius: 50%;
+}
+.hide {
+  display: none;
 }
 .container {
   display: flex;
