--- a/public/css/home.css
+++ b/public/css/home.css
@@ -17,6 +17,15 @@ body {
   margin-left: 1vw;
   height: 4.5vh;
   font-size: medium;
+  border: 1px solid;
+  border-color: rgb(118, 118, 118);
+  border-style: outset;
+  background-color: rgb(239, 239, 239);
+  border-radius: 2px;
+}
+.unauthBtn > a {
+  color: black;
+  text-decoration: none;
 }
 .avatar {
   height: 4vh;
