--- a/public/css/newProfile.css
+++ b/public/css/newProfile.css
@@ -42,3 +42,16 @@ label {
   background-color: rgb(239, 239, 239);
   border-radius: 2px;
 }
+
+#formFooter > button {
+    padding: 8px;
+    margin: 1vw;
+    height: 4.5vh;
+    font-size: medium;
+    border: 1px solid;
+    border-color: rgb(118, 118, 118);
+    border-style: outset;
+    background-color: rgb(239, 239, 239);
+    border-radius: 2px;
+    cursor: pointer;
+}
