--- a/public/css/questionPage.css
+++ b/public/css/questionPage.css
@@ -17,8 +17,7 @@
   margin-left: 2vw;
 }
 .comments {
-  margin-left: 2vw;
-  margin-top: 2vh;
+margin: 3vh 2vw;
 }
 .comments > span {
   font-size: 20px;
