--- a/public/css/home.css
+++ b/public/css/home.css
@@ -38,6 +38,12 @@ body {
   color: black;
   text-decoration: none;
 }
+
+.unauthBtn:hover{
+  cursor: pointer;
+  box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
+}
+
 .avatar {
   height: 4vh;
   border-radius: 50%;
