|#12|Ragini/Satheesh|Added handler test for cancelRegistration

--- a/public/css/profilePage.css
+++ b/public/css/profilePage.css
@@ -8,14 +8,14 @@
   margin: 5vh 3vw;
 }
 
-.avatar {
-  width: 18vw;
+.bigAvatar {
   height: 30vh;
   border-radius: 50%;
+  margin-left: 2vh 2vw;
   overflow: hidden;
 }
 
-.avatar > img {
+.bigAvatar > img {
   width: 18vw;
   height: 30vh;
 }
