--- a/public/css/newProfile.css
+++ b/public/css/newProfile.css
@@ -2,6 +2,7 @@
   position: absolute;
   top: 8vh;
   width: 100vw;
+  margin-left: 33vw;
 }
 
 form {
@@ -28,32 +29,30 @@ label {
 #formFooter {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  width: 16%;
+  width: 20%;
 }
 
 #cancelButton {
+  text-decoration: none;
+  color: black;
+  padding: 0;
+  margin: 0;
+}
+
+#cancelButton, #formFooter > button {
   padding: 8px;
   margin: 1vw;
   font-size: medium;
-  color: black;
-  text-decoration: none;
-  border: 1px solid ;
+  border: 1px solid;
   border-color: rgb(118, 118, 118);
   border-style: outset;
   background-color: rgb(239, 239, 239);
   border-radius: 2px;
+  cursor: pointer; 
+  color: black;
+  text-decoration: none;
 }
 
-#formFooter > button {
-    padding: 8px;
-    margin: 1vw;
-    height: 4.5vh;
-    font-size: medium;
-    border: 1px solid;
-    border-color: rgb(118, 118, 118);
-    border-style: outset;
-    background-color: rgb(239, 239, 239);
-    border-radius: 2px;
-    cursor: pointer;
+#formFooter > a:hover, #formFooter > button:hover {
+   box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
 }
