|#8|Satheesh/Ragini|added postQuestion Route

--- a/views/questions.pug
+++ b/views/questions.pug
@@ -3,6 +3,7 @@ div(class="container")
     div(class="con-header-title") All Questions
     if login
       button(class="askBtn") Ask Question
+    else
   div(class="container-b")
     each question in questions
       div(class="question")
