--- a/views/questions.pug
+++ b/views/questions.pug
@@ -1,9 +1,8 @@
 div(class="container")
   div(class="container-h")
     div(class="con-header-title") All Questions
-    if login
-      button(class="askBtn") Ask Question
-    else
+    if userId
+      button(class="askBtn" onClick="window.location.href='/askQuestion'") Ask Question
   div(class="container-b")
     each question in questions
       div(class="question")
