|#25|santhosh/rivu| fixed bugs in datastore and saveQuestion route
modified pugs

--- a/views/questionPage.pug
+++ b/views/questionPage.pug
@@ -32,7 +32,8 @@ html(lang='en')
             div(class="count")=votes
               div(class="ansCount") votes
         div(class="comments") 
-          span Comments 
+          if(comments.length > 0)
+            span Comments 
           each comment in comments
             div(class="comment")=comment.comment
             div(class="c-author")=`${comment.username}, ${comment.receivedAt}`
@@ -45,7 +46,8 @@ html(lang='en')
                 div(class="count")=answer.votes
                   div(class="ansCount") votes
             div(class="comments a-comments") 
-              span Comments 
+              if(comments.length > 0)
+                span Comments 
               each comment in answer.comments
                 div(class="comment")=comment.comment
                 div(class="c-author")=`${comment.username}, ${comment.receivedAt}`
