--- a/views/questions.pug
+++ b/views/questions.pug
@@ -4,13 +4,16 @@ div(class="container")
     if userId
       button(class="askBtn" onClick="window.location.href='/askQuestion'") Ask Question
   div(class="container-b")
-    each question in questions
-      div(class="question")
-        div(class=question.answers > 0? "countName-a":"countName")
-          div(class="count")=`${question.answers}`
-            div(class="ansCount") answers
-        div
-          div(class="title" onClick=`window.location.href='/question/${question.id}'`)=question.title
-          div(class="tags")
-            each tag in question.tags
-              div(class="tag")=tag
+    if(questions.length > 0)
+      each question in questions
+        div(class="question")
+          div(class=question.answers > 0? "countName-a":"countName")
+            div(class="count")=`${question.answers}`
+              div(class="ansCount") answers
+          div
+            div(class="title" onClick=`window.location.href='/question/${question.id}'`)=question.title
+            div(class="tags")
+              each tag in question.tags
+                div(class="tag")=tag
+    else 
+      p No questions
