--- a/views/postQuestion.pug
+++ b/views/postQuestion.pug
@@ -7,7 +7,7 @@ html
   body
     include titleBar
     div(id="container")
-      h2 POST your answer
+      h2 POST your question
       form(action="/postQuestion" method="POST")
         input(type="text" name="title" placeholder="Enter title ...")
         textarea(name="body", cols="30", rows="10" placeholder="Enter content...")
