|#8|Ragini/Satheesh|Modified insertTag method in datastore
Calling insert tag method from the handler

--- a/views/postQuestion.pug
+++ b/views/postQuestion.pug
@@ -13,4 +13,5 @@ html
         textarea(name="body", cols="30", rows="10" placeholder="Enter content...")
         input(type="text" name="tags" placeholder="Enter tags ...")
         input(type="submit" name="submit" class="submit-tag")
-        button(onClick="window.location.href='/home'") Cancel
+        a(href="/home" id="cancelButton") Cancel
+        //- button(onClick=`window.location.href='/home'`) Cancel
