--- a/public/css/askQuestion.css
+++ b/public/css/askQuestion.css
@@ -3,43 +3,77 @@
   position: absolute;
   top: 8vh;
   height: 90vh;
-  border: 1px solid;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   text-align: center;
 }
 
 form {
   align-self: center;
   width: 60%;
+  text-align: left;
+}
+
+label {
+  margin-bottom: 8vh;
 }
 
 input {
   width: 100%;
   height: 6vh;
   font-size: medium;
-  margin-bottom: 1%;
+  margin-bottom: 3%;
+  margin-top: 1%;
 }
 
-input::placeholder {
-  font-style: italic;
+input::placeholder, textarea::placeholder {
   opacity: 0.7;
+  font-size: medium;
+  font-family: Helvetica, sans-serif;
 }
 
 textarea {
+  margin-bottom: 3%;
+  margin-top: 1%;
   width: 100%;
   font-size: medium;
-  margin-bottom: 1%;
 }
 
 .submit-tag {
-  width:10vw;
+  width: 6.6vw;
   margin: 2%;
+  margin-left: 0;
+  height: 4.8vh;
 }
 
-button {
-  width:10vw;
-  height: 6vh;
-  margin: 1%;
+#cancelButton:hover, button:hover {
+  cursor: pointer;
+}
+
+#cancelButton {
+  padding: 8px;
+  margin: 1vw;
+  font-size: medium;
+  border: 1px solid;
+  border-color: rgb(118, 118, 118);
+  border-style: outset;
+  background-color: rgb(239, 239, 239);
+  border-radius: 2px;
+  cursor: pointer; 
+  color: black;
+  text-decoration: none;
+  width: 5.5vw;
+  text-align: center;
+}
+
+p {
+  font-size: xx-large;
+  /* margin: 0; */
+}
+
+#formFooter {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
 }
