--- a/public/css/newProfile.css
+++ b/public/css/newProfile.css
@@ -2,55 +2,80 @@
   position: absolute;
   top: 8vh;
   width: 100vw;
-  margin-left: 33vw;
+  height: 92%;
+  display: flex;
+  justify-content: center;
+  background: url("../images/background.jpg") no-repeat;
+  background-size: 100%;
 }
 
 form {
   display: flex;
   flex-direction: column;
-}
-
-input {
+  align-items: center;
   width: 30%;
-  padding: 0.5%;
-  margin-left:1% ;
+  background-color: white;
+  margin: 7vh 0vw;
+  padding-top: 2%;
 }
-
+legend {
+  font-size: large;
+  color: #00a8cc;
+  padding-bottom: 2%;
+}
+input {
+  width: 100%;
+  padding: 2% 1%;
+  margin-left: 1%;
+  outline: none;
+  border: none;
+  border-bottom: solid 1px rgba(41,41,41,0.5);
+  font-size: medium;
+}
+input:-webkit-autofill {
+  background-color: white !important;
+}
 label {
-  margin: 0.5% 1%;
+  font-size: small;
+  margin: 1.5% 1%;
+  width: 80%;
+  color: rgba(41,41,41,0.7);
 }
 
 #bio {
-  width: 30%;
-  padding: 0.5%;
-  margin-left:1% ;
+  width: 78%;
+  height: 35%;
+  padding: 2%;
+  margin-left: 1%;
+  outline: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: medium;
 }
 
 #formFooter {
   display: flex;
   flex-direction: row;
-  width: 20%;
+  width: 80%;
+  padding: 10% 0%;
+  justify-content: space-evenly;
 }
 
 #cancelButton {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-decoration: none;
-  color: black;
-  padding: 0;
-  margin: 0;
+  text-align: center;
 }
 
 #cancelButton, #formFooter > button {
-  padding: 8px;
-  margin: 1vw;
-  font-size: medium;
-  border: 1px solid;
-  border-color: rgb(118, 118, 118);
-  border-style: outset;
-  background-color: rgb(239, 239, 239);
-  border-radius: 2px;
-  cursor: pointer; 
-  color: black;
-  text-decoration: none;
+  width: 30%;
+  height: 5vh;
+  font-size: larger;
+  background-color: #00a8cc;
+  color: #ffffff;
+  border: none;
+  transition: border .3s ease-in;
 }
 
 #formFooter > a:hover, #formFooter > button:hover {
