--- a/public/css/askQuestion.css
+++ b/public/css/askQuestion.css
@@ -9,6 +9,12 @@
   text-align: center;
 }
 
+p {
+  font-size :xx-large;
+  font-family:Helvetica, sans-serif;
+  color: rgba(41,41,41,0.8)
+}
+
 form {
   align-self: center;
   width: 60%;
@@ -16,7 +22,9 @@ form {
 }
 
 label {
-  margin-bottom: 8vh;
+  font-size: large;
+  width: 80%;
+  color: rgba(41,41,41,0.7);
 }
 
 input {
@@ -25,6 +33,8 @@ input {
   font-size: medium;
   margin-bottom: 3%;
   margin-top: 1%;
+  outline: none;
+  padding-left:1%;
 }
 
 input::placeholder, textarea::placeholder {
@@ -38,42 +48,36 @@ textarea {
   margin-top: 1%;
   width: 100%;
   font-size: medium;
-}
-
-.submit-tag {
-  width: 6.6vw;
-  margin: 2%;
-  margin-left: 0;
-  height: 4.8vh;
-}
-
-#cancelButton:hover, button:hover {
-  cursor: pointer;
-}
-
-#cancelButton {
-  padding: 8px;
-  margin: 1vw;
-  font-size: medium;
-  border: 1px solid;
-  border-color: rgb(118, 118, 118);
-  border-style: outset;
-  background-color: rgb(239, 239, 239);
-  border-radius: 2px;
-  cursor: pointer; 
-  color: black;
-  text-decoration: none;
-  width: 5.5vw;
-  text-align: center;
-}
-
-p {
-  font-size: xx-large;
-  /* margin: 0; */
+  outline: none;
+  padding:1%;
+  padding-left:1%;
 }
 
 #formFooter {
   display: flex;
   flex-direction: row;
   width: 80%;
+}
+
+#cancelButton {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-decoration: none;
+  text-align: center;
+}
+
+#cancelButton, #formFooter > button {
+  margin-right:5%;
+  width: 20%;
+  height: 5vh;
+  font-size: larger;
+  background-color: #00a8cc;
+  color: #ffffff;
+  border: none;
+  transition: border .3s ease-in;
+}
+
+#formFooter > a:hover, #formFooter > button:hover {
+   box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
 }
