--- a/public/css/newProfile.css
+++ b/public/css/newProfile.css
@@ -1,11 +1,11 @@
 #container {
   position: absolute;
-  top: 8vh;
+  top: 0vh;
   width: 100vw;
-  height: 92%;
+  height: 100%;
   display: flex;
   justify-content: center;
-  background: url("../images/background.jpg") no-repeat;
+  background: url("../images/bg.jpg") no-repeat;
   background-size: 100%;
 }
 
@@ -13,16 +13,22 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 30%;
+  width: 28%;
   background-color: white;
-  margin: 7vh 0vw;
+  margin: 9vh 0vw;
   padding-top: 2%;
+  box-shadow:  2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
 }
 legend {
   font-size: large;
   color: #00a8cc;
   padding-bottom: 2%;
+  font-weight: 600;
 }
+form legend:nth-child(2) {
+padding-bottom: 8%;
+}
+
 input {
   width: 100%;
   padding: 2% 1%;
