--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,40 +5,69 @@ body {
   word-break: break-word;
 }
 
-#titlebar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  border-bottom: 1px #c5c5c5 solid;
-  background: white;
+#container {
+  position: absolute;
+  top: 0vh;
   width: 100vw;
-  height: 8vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background: url(../images/bg.jpg) no-repeat;
+  background-size: 100%;
 }
 
-.logo {
-  font-size: 30px;
-  margin: 2vh 1.5vw;
-  cursor: pointer;
+.quote {
+  margin-right: auto;
+  margin-left: auto;
+  font-size: xxx-large;
+  font-family: cursive;
+  font-weight: 800;
+  color: white;
+}
+#container div:first-child {
+  margin-top: 4%;
 }
 
-#container{
-  text-align: center;
+#container div:nth-child(2) {
+  margin-bottom: 5%;
+}
+
+.box {
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  width: 20%;
+  background-color: white;
+  padding-top: 2%;
+  box-shadow: 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);}
+
+#formFooter {
+  display: flex;
+  flex-direction: column;
+  margin: 0 !important;
 }
 
-button{
-  padding: 8px;
-  width: 20vw;
-  font-size: medium;
-  border: 1px solid;
-  border-color: rgb(118, 118, 118);
-  border-style: outset;
-  background-color: rgb(239, 239, 239);
-  border-radius: 2px;
-  margin: 2vh 1.5vw;
+#cancelButton, #formFooter > button {
+  height: 6vh;
+  font-size: larger;
+  background-image: linear-gradient(to right,#16b3d6, #00a8cc ,#16b3d6);
+  color: #ffffff;
+  border: none;
+  transition: border .3s ease-in;
+  margin-bottom: 11%;
+  outline: none;
 }
 
-button:hover{
-  cursor: pointer;
-  box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
+#formFooter > a:hover, #formFooter > button:hover {
+   box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
+}
+
+.legend {
+  font-size: xx-large;
+  text-align: center;
+  margin: 0 !important;
+  margin-bottom: 10% !important;
+  color: #00a8cc;
 }
