--- a/views/titleBar.pug
+++ b/views/titleBar.pug
@@ -5,4 +5,4 @@ div(class="titleBar")
           div(class="userName")=userInfo.username
           img(class="avatar" src=`${userInfo.avatar}`, alt="alt" onClick=`window.location.href='/viewProfile?id=${userId}'`)
         else
-          button(class="pageBtn" onClick="window.location.href='/html/login.html'") Login
+          button(class="pageBtn" onClick="window.location.href='/loginPage'") Login
