--- a/views/menuBar.pug
+++ b/views/menuBar.pug
@@ -1,5 +1,4 @@
 div(class="menubar")
-  div(class="menu-item highlight" onClick="window.location.href='/home'") Home
-  -let list = ["Your Questions","Your Answers","Your Tags"]
+  -let list = [{tag:"Home",url:'/home'},{tag:"Your Questions",url:''},{tag:"Your Answers",url:''},{tag:"Your Tags",url:''},{tag:"Your Profile",url:`/viewProfile?id=${userId}`}]
   each item in list
-    div(class="menu-item")=item
+    div(class="menu-item" id=`${item.tag}` item.url ? onclick=`window.location.href='${item.url}'` )=item.tag
