|#10|Ragini/Satheesh|Added styles for post Answer

--- a/public/css/questionPage.css
+++ b/public/css/questionPage.css
@@ -73,6 +73,10 @@ width: 80%;
   color: rgba(41, 41, 41, 0.9);
 }
 
+.answers > .comments {
+  border-bottom: 1px solid rgba(41, 41, 41, 0.5);
+}
+
 .comments {
   margin: 2vh 4vw 2vh 0;
   border-bottom: 2px solid rgba(41, 41, 41, 0.5);
@@ -91,7 +95,6 @@ width: 80%;
 
 .c-author {
   font-weight: 400;
-  color: rgba(41, 41, 41,0.7);
   padding-bottom: 1vh;
   margin-left: 2vw;
   text-align: right;
