--- a/views/questionPage.pug
+++ b/views/questionPage.pug
@@ -37,6 +37,7 @@ html(lang='en')
           each comment in comments
             div(class="comment")=comment.comment
             div(class="c-author")=`${comment.username}, ${comment.receivedAt}`
+        include postAnswer
         div(class="answers")
           span=`${answers.length} Answers`
           each answer in answers
