--- a/views/newProfile.pug
+++ b/views/newProfile.pug
@@ -5,7 +5,7 @@ html(lang='en')
     title New Profile
     style
       include ../public/css/newProfile.css
-  body
+  body(style="margin:0")
     div(id="container")
       form(action="/newProfile", method="post")
         legend Welcome to Inquire!
