--- a/public/css/postAnswer.css
+++ b/public/css/postAnswer.css
@@ -21,10 +21,11 @@ textarea {
   margin-bottom: 3%;
   margin-top: 1%;
   width: 100%;
-  font-size: medium;
+  font-size: large;
   outline: none;
   padding:1%;
   padding-left:1%;
+  font-family: Helvetica, sans-serif;
 }
 #formFooter {
   display: flex;
@@ -40,7 +41,17 @@ textarea {
   color: #ffffff;
   border: none;
   transition: border .3s ease-in;
+  outline: none;
 }
 #formFooter > a:hover, #formFooter > button:hover {
    box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
+}
+
+.popUp {
+  color: red;
+  font-size: larger;
+  align-self: center;
+}
+.hide {
+  display: none;
 }
