--- a/views/answer.pug
+++ b/views/answer.pug
@@ -3,12 +3,16 @@ div(class="answers")
       each answer in answers
         div(class="question-body")
           div(class="question-body-c")=answer.answer
-          div(class="vote-container")
-            div(class="up-arrow")
-            div(class="countName votes")
-              div(class="count")=answer.votes
-                div(class="ansCount") votes
-            div(class="down-arrow")
+          div(class="sidebar") 
+            div(class="tickmark")
+              -const url=answer.isAccepted ? "greentickmark.png" : "tickmark.png"
+              img(src=`/images/${url}`, alt="not found", onclick=`updateAcceptAnswer('${questionDetails.id}','${answer.id}')`) 
+            div(class="vote-box")
+              div(class="up-arrow")
+              div(class="countName votes")
+                div(class="count")=answer.votes
+                  div(class="ansCount") votes
+              div(class="down-arrow")
         div(class="comments a-comments") 
               if(comments.length > 0)
                 span Comments 
