--- a/views/postComment.pug
+++ b/views/postComment.pug
@@ -3,7 +3,7 @@ style
   include ../public/css/postComment.css
 mixin getId(resId)
   p(class="add-comment" onclick=`toggleCommentBox('.form-${resId}')`) add comment
-  form(class=`form-${resId} hide` action=`/postComment/${questionDetails.id}/${resId}` method="POST" onSubmit=`return checkForm(${userId})`)
+  form(class=`form-${resId} hide` action=`/postComment/${questionDetails.id}/${resId}` method="POST" onSubmit=`return checkForm(${userId}, this)`)
     input(name="comment", type="text",placeholder="Enter comment..." minlength='10' maxlength='180' required)
     div(id="formFooter")
       button Post comment
