--- a/views/answer.pug
+++ b/views/answer.pug
@@ -3,17 +3,18 @@ div(class="answers")
       each answer in answers
         div(class="question-body")
           div(class="question-body-c")=answer.answer
-          div(class="sidebar") 
-            div(class="tickmark")
-              -const url=answer.isAccepted ? "greentickmark.png" : "tickmark.png"
-              img(src=`/images/${url}`, alt="not found", onclick=`updateAcceptAnswer('${questionDetails.id}','${answer.id}', this)`) 
-            div(class="vote-box")
-              div(class="up-arrow" onclick=`updateVote('/upVote/answers/${answer.id}',this)`)
-              div(class="countName votes")
-                div(class="count")
-                  span=answer.votes
-                  div(class="ansCount") votes
-              div(class="down-arrow" onclick=`updateVote('/downVote/answers/${answer.id}',this)`)
+          div(class="flex-column")
+            div(class="error invisible") error message
+            div(class="sidebar") 
+              div(class="tickmark")
+                -const url=answer.isAccepted ? "greentickmark.png" : "tickmark.png"
+                img(src=`/images/${url}`, alt="not found", onclick=`updateAcceptAnswer('${questionDetails.id}','${answer.id}', this)`) 
+              div(class="vote-box")
+                div(class="up-arrow")
+                div(class="countName votes")
+                  div(class="count")=answer.votes
+                    div(class="ansCount") votes
+                div(class="down-arrow")
         div(class="comments a-comments") 
               if(comments.length > 0)
                 span Comments 
