|#20|Santhosh/Satheesh|Rendering header of questions Container
Toggling the highlight menu items

--- a/views/home.pug
+++ b/views/home.pug
@@ -5,8 +5,8 @@ html(lang='en')
     title home page
     style
       include ../public/css/home.css
-    script(src="../js/toggleHighlight.js")
-  body(onload="highlighter('Home')")
+    script(src="../js/renderHeader.js")
+  body(onload=`renderHeader(${questions.length})`)
     include titleBar
     include menuBar
     include questions
