--- a/views/menuBar.pug
+++ b/views/menuBar.pug
@@ -1,5 +1,5 @@
 div(class="menubar")
-  -let list = [{tag:"Home",url:'/home'},{tag:"Your Questions",url:'/yourQuestions'},{tag:"Your Answers",url:''},{tag:"Your Tags",url:''},{tag:"Your Profile",url:`/viewProfile?id=${userId}`}]
+  -let list = [{tag:"Home",url:'/home'},{tag:"Your Questions",url:'/yourQuestions'},{tag:"Your Answers",url:'/yourAnswers'},{tag:"Your Tags",url:''},{tag:"Your Profile",url:`/viewProfile?id=${userId}`}]
   each item in list
     -const className = (!userId && item.tag !== 'Home') ? 'hide' : ''
     div(class=`menu-item ${className}` id=`${item.url}` item.url ? onclick=`window.location.href='${item.url}'` )=item.tag
